# marcel-emnlp-experiments

./: .gitignore  README.md  pyproject.toml
.github/workflows/: backend.yml
data/queries/: 20250317-email.example.json  20250317-faq.json
notebooks/: dataset-statistics.ipynb  generator-evaluation.ipynb  retriever-evaluation.ipynb
scripts/: bm25.sh  bm25_dense_minilm.sh  bm25_dense_minilm_gpu.sh  bm25_dense_msmarco.sh  bm25_dense_msmarco_gpu.sh  bm25_dense_rerank.sh  bm25_dense_rerank_sweep.sh  bm25_faq_minilm.sh  bm25_faq_msmarco.sh  bm25_faq_msmarco_gpu.sh  bm25_faq_rerank.sh  bm25_hyde.sh  bm25_hyde_rerank.sh  evaluate.sh  evaluate_task_list.sh  generation_gemma-12b.sh  generation_gemma-1b.sh  generation_gemma-27b.sh  generation_gemma-27b_oracle.sh  generation_gemma-4b.sh  generation_llama-3.1-70b.sh  generation_llama-3.1-70b_w8a8.sh  generation_llama-3.1-8b.sh  generation_llama-3.1-8b_w8a8.sh  vllm_serve.sh
src/marcel/: components.py  data_loader.py  experiment_runner.py  faq_retriever.py  hyde.py  oracle_retriever.py  retrievers.py
tests/: test_components.py  test_faq_retriever.py
tests/experiments/: test_components.py  test_data_loader.py  test_faq_retriever.py  test_oracle_retriever.py
