[project]
name = "marcel"
version = "0.9.1"
description = "Default template for PDM package"
authors = [
    {name = "Jan Trienes", email = "jan.trienes@uni-marburg.de"},
]
dependencies = [
    "haystack-ai==2.14.2",
    "sentence-transformers==4.1.0",
    "transformers[sentencepiece,torch]==4.52.2",
    "nltk==3.9.1",
    "w3lib==2.3.1",
    "marcel-evaluation @ git+ssh://git@github.com/aix-group/marcel-evaluation.git@main",
    "torch==2.6.0",
    "statsmodels>=0.14.5"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

# Change this if you need another torch build (e.g., for cpu or higher cuda)
# Afterwards run "pdm add torch==2.6.0" to update lock file
[[tool.pdm.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
include_packages = ["torch"]
exclude_packages = ["*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.pdm]
# This is set to true so that package becomes importable
distribution = true

[tool.pdm.scripts]
format-code = "ruff format"
format-imports = "ruff check --select I --fix"
format = {composite = ["format-imports", "format-code"]}
lint = "ruff check"
lint-fix = "ruff check --fix"
test.cmd = "pytest --cov-report html --cov=marcel --cov-branch"
test.env_file = '../.env.test'

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-mock==3.14.0",
    "pytest-cov==6.1.1",
    "ipykernel==6.29.5",
    "ruff==0.11.7",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
]
